# Translate

./: .prettierignore  .prettierrc  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  vite.config.ts
demo-plugin/: index.js  package.json
example-plugin/: index.js  package.json
excel-plugin/: index.js  package.json
src/: App.css  App.module.scss  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: database.rs  excel.rs  javascript.rs  lib.rs  plugin_api.rs  plugins.rs
src-tauri/src/ai/: chromadb.rs  chromadb_server.rs  commands.rs  llm.rs  mod.rs
src-tauri/src/translate/: mod.rs
src-tauri/src/translate/excel/: excel.rs  mod.rs
src-tauri/src/translate/image/: image_converter.rs  mod.rs
src/assets/styles/: _tokens.scss  global.scss
src/components/: AppHeader.module.scss  AppHeader.tsx  AssistantPanel.module.scss  AssistantPanel.tsx  ChatCanvas.module.scss  ChatCanvas.tsx  ExcelProcessor.tsx  ImageConverter.tsx  JavaScriptExecutor.tsx  MenuBar.tsx  PluginManager.css  PluginManager.tsx  Sidebar.module.scss  Sidebar.tsx
src/components/AssistantPanel/: AssistantPanel.module.scss  AssistantPanel.tsx
src/components/ChatCanvas/: ChatCanvas.module.scss  ChatCanvas.tsx  MarkdownMessage.tsx
src/components/Header/: AppHeader.module.scss  AppHeader.tsx
src/components/Sidebar/: Sidebar.module.scss  Sidebar.tsx
src/components/icons/: AIIcon.tsx
src/pages/chat/: ChatPage.module.scss  index.tsx
src/pages/settings/: Settings.module.scss  index.tsx
src/services/: db.ts
src/services/ai/: chromadb.ts
src/styles/: _tokens.scss  global.scss
src/types/: chat.ts
