[package]
name = "Translate"
version = "0.1.0"
description = "file translate"
authors = ["zhf"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tools_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.1.0", features = [] }

[dependencies]
tauri = { version = "2.4.0", features = [] }
tauri-build = { version = "2.1.0", features = [] }
tauri-plugin-opener = "2.2.6"
tauri-plugin-dialog = "2.2.0"
calamine = { version = "0.26.1", features = [] }
serde = { version = "1.0.219", features = [] }
scraper = "0.23.1"
rust_xlsxwriter = "0.85.0"
chrono = "0.4.40"
regex = "1.11.1"
image = "0.24.7"
base64 = "0.21.5"
ico = "0.3.0"

