[package]
name = "Translate"
version = "0.1.0"
description = "file translate"
authors = ["zhf"]
edition = "2021"
[lib]
name = "tools_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
tauri = { version = "2.8.5", features = ["unstable"] }
tauri-build = { version = "2.4.1", features = [] }
tauri-plugin-opener = "2.5.0"
tauri-plugin-dialog = "2.4.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
calamine = { version = "0.26.1", features = [] }
scraper = "0.23.1"
rust_xlsxwriter = "0.85.0"
chrono = "0.4.40"
regex = "1.11.1"
image = "0.24.7"
base64 = "0.21.5"
ico = "0.3.0"

# 打包 Node.js 到 Tauri 中
temp-dir = "0.1.11"
flate2 = "1.0.28"
tar = "0.4.40"
reqwest = { version = "0.11.23", features = ["json", "stream"] }
futures-util = "0.3"
tokio = { version = "1.0", features = ["full"] }
zip = "0.6.6"
once_cell = "1.19.0"
rusqlite = { version = "0.37.0", features = ["bundled"] }
uuid = { version = "1.19.0", features = ["v4", "v7", "serde"] }

[dev-dependencies]
tempfile = "3.23.0"

